# slides-CMake-von-Hello-World

./: index.html  slides.md  style.css
example2/: CMakeLists.txt
example2/Print/: CMakeLists.txt
